# Ebac-DataScience

./: .gitignore.save  Mod03 Tarefa01.ipynb  Mod03Ex01 - Python basico-2.ipynb  Mod04 - Tarefa aula 01 e 02-2.ipynb  Mod04_Tarefa_aula_03_a_05_(base) (1).ipynb  Mod04_Tarefa_aulas_06_a_08.ipynb  Mod05 Tarefa01.ipynb  Mod05 Tarefa02.ipynb  Mod06 Tarefa02.ipynb  Mod06 Tarefa03.ipynb  Mod07 Tarefa01.ipynb  Mod07 Tarefa02.ipynb  Mod09 Tarefa01.ipynb  Mod09 Tarefa02.ipynb  Mod10 Tarefa01.ipynb  Mod10 Tarefa02.ipynb  Mod10 Tarefa03.ipynb  Mod11 Tarefa01.ipynb  Mod11 Tarefa02.ipynb  Mod12 Tarefa01.ipynb  Mod12 Tarefa02.ipynb  Mod12 Tarefa03.ipynb  Mod13_Tarefa01.ipynb  Mod13_Tarefa02.ipynb  Mod14 Tarefa01.ipynb  Mod14 Tarefa02.ipynb  Mod17 Tarefa01.ipynb  Mod17 Tarefa02.ipynb  Mod17 Tarefa03.ipynb  Mod17_Tarefa01.ipynb  Mod18 Tarefa01.ipynb  Mod18 Tarefa02.ipynb  Mod20 Tarefa01.ipynb  Mod21 Tarefa03.ipynb  Mod22 Tarefa01.ipynb  Mod22 Tarefa02.ipynb  Mod23 Tarefa01.ipynb  Mod23 Tarefa02.ipynb  Mod23 Tarefa03.ipynb  Mod24 Tarefa01.ipynb  (+19 more)
Mod 22/: Mod22 Tarefa02.ipynb
Mod 22/Dados/: dados_historicos_acoes.csv
Mod31/: README.md  app_RFV.py  pyproject.toml  render.yaml  requirements.txt
Mod32/: Mod32 Tarefa01.ipynb
Mod33/: Mod33 Tarefa01.ipynb
Mod34/: Mod34 Tarefa01.ipynb
Mod35/: Mod35 Tarefa01.ipynb
Mod36/: Mod36 Tarefa01.ipynb  Mod36 Tarefa02.ipynb
Mod37/: Mod37 Tarefa01.ipynb  Mod37 Tarefa02.ipynb
Mod38/: Mod38_Projeto_Final.ipynb  Mod38_Tarefa01.ipynb  app_credit_scoring.py
Mod38/Mod38/: README.md
Projeto Semantix/: projeto_vinho_semantix.ipynb
