[tool.poetry]
name = "mod31"
version = "0.1.0"
description = "Projeto de classificação"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
XlsxWriter = "*"
streamlit = "*"
pandas = "*"
scikit-learn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
