[tool.poetry]
name = "mod31"
version = "0.1.0"
description = "Projeto de classificação"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.23.1"
pandas = "1.3.5"
numpy = "1.24.4"
XlsxWriter = "3.1.9"
scikit-learn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
